# owendewing-certification-challenge

./: .gitignore  Advanced_Retrieval.ipynb  Certification_Challenge.ipynb  Makefile  OwenDewing_CertificationChallenge.md  README.md  docker-compose.yml  env.example  pyproject.toml
backend/: main.py  requirements.txt
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
