[project]
name = "student-loan-ai-assistant"
version = "0.1.0"
description = "AI Assistant for Student Loan Information using RAG, LangChain, and LangSmith"
authors = [
    {name = "Owen Dewing", email = "owen@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core LLM and RAG dependencies
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langsmith>=0.0.69",
    "openai>=1.3.0",
    # Vector database and embeddings
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    # Document processing
    "pypdf>=3.17.0",
    "pymupdf>=1.23.8",
    "python-docx>=0.8.11",
    "unstructured>=0.10.30",
    # RAG evaluation with Ragas
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    # Web framework
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    # Frontend
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.2",
    "tiktoken>=0.5.1",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    # Jupyter and development
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.2",
    "arxiv>=2.2.0",
    "llm>=0.26",
    "cohere>=5.16.2",
    "langchain-cohere>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
